src/styles/GameCard.css
.card-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 20px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  transition: transform .2s;
  width: 380px;
  height: 320px;
}

.card-container:hover {
  transform: scale(1.03);
  cursor: pointer;
}

.card-image-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 75%; 
  overflow: hidden;
}

.card-image {
  max-width: 110%;
  object-fit: cover;
}

.card-info-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: 25%;
}

.card-difficulty {
  font-weight: bold;
  margin-left: 30px;
}

.card-characters {
  margin-right: 30px;
}

.card-character-image {
  max-height: 25px;
  margin-left: 10px;
}

